[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/sprites/nums.png" type="Texture" id=1]
[ext_resource path="res://nums.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 147, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 294, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 441, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 588, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 735, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 882, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1029, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1176, 0, 147, 121 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1323, 0, 147, 121 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Numeros",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 40, 33 )

[node name="Control" type="Control"]
margin_right = 81.0
margin_bottom = 67.0
rect_min_size = Vector2( 82, 68 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num" type="Node2D" parent="."]
position = Vector2( 41, 34 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="num"]
position = Vector2( 0.0908699, -3.05176e-05 )
scale = Vector2( 0.545454, 0.545454 )
frames = SubResource( 11 )
animation = "Numeros"

[node name="area" type="Area2D" parent="num"]
position = Vector2( 0.0908699, -3.05176e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="num/area"]
shape = SubResource( 12 )

[connection signal="area_entered" from="num/area" to="num" method="_on_area_area_entered"]
[connection signal="area_exited" from="num/area" to="num" method="_on_area_area_exited"]
[connection signal="input_event" from="num/area" to="num" method="_on_area_input_event"]
